Set font family of toggle to monospace so the labels of leaves and non-leaves are aligned. This fixes https://github.com/rpbouman/xavier/issues/53

--- a/src/css/mdpivottable.css
+++ b/src/css/mdpivottable.css
@@ -156,6 +156,7 @@ table.pivot-table td.ancestor {
 span.toggle {
   margin-right: 2px;
   cursor: pointer;
+  font-family: monospace;
 }
 
 span.toggle:before {
